--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -48,7 +48,7 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Nouman Rasool</h1>
     </a>
 
     <div class="social-links text-center">
@@ -157,16 +157,15 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Category</strong>: AI powered Software development</li>
+                <li><strong>Project date</strong>: 01 June, 2025</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>AI powered Market Sentiment Analysis</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                This full-stack system monitors and visualizes market sentiment trends across various sectors in real time. It leverages a FastAPI backend for processing live data with VADER sentiment analysis, a PostgreSQL database for persistent storage, and a Streamlit dashboard for user-friendly visualization and reporting. The entire solution is containerized using Docker and deployed on AWS EC2 using Docker Compose, enabling scalable, modular service orchestration.
               </p>
             </div>
           </div>
